checktyle does not check .jpg, .git, etc.  finished fixing all undesired checkstyle issues, the rest are deliberate